Bugfix, overflow-x is hidden now instead of y

--- a/assets/css/less/main.less
+++ b/assets/css/less/main.less
@@ -63,7 +63,7 @@ html, body {
             .boxsizingBorder();
             .clearfix();
             position: relative;
-            overflow-y: hidden;
+            overflow-x: hidden;
             
             border-bottom: @seperator-style-bottom;
             
